// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`data-type-tree ancestors should get ancestor items 1`] = `
{
  "content": [
    {
      "text": "[{"editorUiAlias":null,"isDeletable":false,"isFolder":true,"name":"_Test Folder DataType","id":"00000000-0000-0000-0000-000000000000","parent":null,"hasChildren":true},{"editorUiAlias":null,"isDeletable":false,"isFolder":false,"name":"_Test Child DataType","id":"00000000-0000-0000-0000-000000000000","parent":{"id":"00000000-0000-0000-0000-000000000000"},"hasChildren":false}]",
      "type": "text",
    },
  ],
}
`;

exports[`data-type-tree ancestors should handle non-existent item 1`] = `
{
  "content": [
    {
      "text": "[]",
      "type": "text",
    },
  ],
}
`;

exports[`data-type-tree children should get child items 1`] = `
{
  "content": [
    {
      "text": "{"total":1,"items":[{"editorUiAlias":"Umb.PropertyEditorUi.Textbox","isDeletable":true,"isFolder":false,"name":"_Test Child DataType","id":"00000000-0000-0000-0000-000000000000","parent":{"id":"00000000-0000-0000-0000-000000000000"},"hasChildren":false}]}",
      "type": "text",
    },
  ],
}
`;

exports[`data-type-tree children should handle non-existent parent 1`] = `
{
  "content": [
    {
      "text": "{"total":0,"items":[]}",
      "type": "text",
    },
  ],
}
`;
